--- a/admin_module/templates/admin_module/rejected_posts.html
+++ b/admin_module/templates/admin_module/rejected_posts.html
@@ -77,12 +77,7 @@
                                     <span class="badge badge-danger">رد شده</span>
                                 </td>
                                 <td class="project-actions text-right">
-                                    {% if obj.status != 'published' %}
-                                        <a class="btn btn-info btn-sm" href="{% url 'edit_article' obj.pk %}">
-                                            <i class="fas fa-edit"></i> ویرایش
-                                        </a>
-                                    {% endif %}
-                                    <a class="btn btn-warning btn-sm" href="#">
+                                    <a class="btn btn-warning btn-sm" href="{% url 'edit_article' obj.pk %}">
                                         <i class="fas fa-exclamation">
                                         </i>
                                         علت رد شدن پست
