--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -19,7 +19,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="{% url 'coming_soon' %}">
                                             فروشگاه
                                         </a>
                                     </li>
