--- a/home_module/templates/home_module/coming_soon.html
+++ b/home_module/templates/home_module/coming_soon.html
@@ -43,11 +43,9 @@
                             </div>
                         </form>
                         <div class="gt-social-icon d-flex align-items-center wow fadeInUp rtl" data-wow-delay=".3s">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fa-solid fa-camera"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="https://web.telegram.org/k/#@arshia21420" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                         </div>
                     </div>
                 </div>
