--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -41,7 +41,7 @@
                         <a href="#" class="main-header__search search-toggler">
                             <i class="fa-regular fa-magnifying-glass"></i>
                         </a>
-                        <a href="#">
+                        <a href="{% url 'coming_soon' %}">
                             <i class="far fa-shopping-cart"></i>
                         </a>
                         {% if user.is_authenticated %}
