--- a/templates/shared/_layout.html
+++ b/templates/shared/_layout.html
@@ -34,7 +34,7 @@
             <div class="offcanvas__content">
                 <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                     <div class="offcanvas__logo">
-                        <a href="#">
+                        <a href="{% url 'home' %}">
                             <img src="{% static 'xsports/img/logo/white-logo.svg' %}" alt="logo-img">
                         </a>
                     </div>
@@ -56,16 +56,19 @@
                                 <i class="fal fa-map-marker-alt"></i>
                             </div>
                             <div class="offcanvas__contact-text">
-                                <a target="_blank" href="#">ایران استان البرز</a>
+                                <p class="text d-none d-xl-block">
+                                    ایران استان تهران سلسبیل
+                                </p>
                             </div>
                         </li>
                         <li class="d-flex align-items-center">
-                            <div class="offcanvas__contact-icon mr-15">
-                                <i class="fal fa-envelope"></i>
+                            <div class="offcanvas__contact-icon">
+                                <i class="fal fa-mailbox"></i>
                             </div>
                             <div class="offcanvas__contact-text">
-                                <a href="mailto:info@example.com"><span
-                                        class="mailto:info@example.com">info@example.com</span></a>
+                                <p class="text d-none d-xl-block">
+                                    arshia21420@gmail.com
+                                </p>
                             </div>
                         </li>
                         <li class="d-flex align-items-center">
@@ -73,7 +76,9 @@
                                 <i class="fal fa-clock"></i>
                             </div>
                             <div class="offcanvas__contact-text">
-                                <a target="_blank" href="#">روز جمعه، 09 صبح تا 5 بعد از ظهر</a>
+                                <p class="text d-none d-xl-block">
+                                    همه روزه، 24/7
+                                </p>
                             </div>
                         </li>
                         <li class="d-flex align-items-center">
@@ -81,15 +86,14 @@
                                 <i class="far fa-phone"></i>
                             </div>
                             <div class="offcanvas__contact-text">
-                                <a href="tel:+11002345909">09121111222</a>
+                                <a href="tel:+989374641310">09374641310</a>
                             </div>
                         </li>
                     </ul>
                     <div class="social-icon d-flex align-items-center">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com/arshia219675/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://web.telegram.org/k/#@arshia21420" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://wa.me/989374641310" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
