header title and header subtitle added

--- a/article_module/templates/article_module/article_detail.html
+++ b/article_module/templates/article_module/article_detail.html
@@ -4,6 +4,8 @@
 {% load jalali_tags %}
 {% load render_partial %}
 {% block title %}وبلاگ | {{ object.title }}{% endblock %}
+{% block header_subtitle %}به وبلاگ رسمی سایت خوش آمدید؛ فضایی برای انتشار مطالبی در زمینه‌های متنوع.{% endblock %}
+{% block header_title %} وبلاگ | جایی برای ایده‌ها، تجربه‌ها و دانستنی‌ها{% endblock %}
 {% block content %}
     <!-- GT News-details Section Start -->
     <section class="news-details-section section-padding">
