--- a/article_module/templates/article_module/article_list.html
+++ b/article_module/templates/article_module/article_list.html
@@ -6,6 +6,8 @@
 {% block title %}وبلاگ{% endblock %}
 {% block header_bg %}{% static 'xsports/img/home-2/hero/hero-bg.png' %}{% endblock %}
 {% block hero_bg %}{% static 'xsports/img/home-2/hero/hero-01.png' %}{% endblock %}
+{% block header_subtitle %}به وبلاگ رسمی سایت خوش آمدید؛ فضایی برای انتشار مطالبی در زمینه‌های متنوع.{% endblock %}
+{% block header_title %} وبلاگ | جایی برای ایده‌ها، تجربه‌ها و دانستنی‌ها{% endblock %}
 {% block content %}
     <!-- GT News-standard Section Start -->
     <section class="news-standard-section section-padding rtl">
