--- a/contact_module/templates/contact_module/contact.html
+++ b/contact_module/templates/contact_module/contact.html
@@ -3,6 +3,8 @@
 {% block title %} تماس با ما {% endblock %}
 {% block hero_bg %}{% static 'xsports/img/home-3/hero/hero-image.png' %}{% endblock %}
 {% block header_bg %}{% static 'xsports/img/home-3/hero/hero-bg.png' %}{% endblock %}
+{% block header_subtitle %}اگر سوال، پیشنهاد، انتقاد یا درخواست همکاری دارید، خوشحال می‌شویم با ما در تماس باشید.{% endblock %}
+{% block header_title %}مایلیم صدای شما را بشنویم.{% endblock %}
 {% block content %}
     <!-- GT Contact-us Section Start -->
     <section class="gt-contact-us-section section-padding fix rtl">
@@ -11,7 +13,7 @@
                 <div class="row g-4">
                     <div class="col-lg-8">
                         <div class="gt-comment-form-wrap">
-                            <h4>ما اینجاییم تا کمک کنیم!</h4>
+                            <h4></h4>
                             <p>آدرس ایمیل شما منتشر نخواهد شد. پر کردن تمامی فیلد ها ضروری میباشد.</p>
                             <b>
                                 {% if messages %}
