--- a/home_module/templates/home_module/coming_soon.html
+++ b/home_module/templates/home_module/coming_soon.html
@@ -1,6 +1,8 @@
 {% extends 'shared/_layout.html' %}
 {% load static %}
 {% block title %}به زودی ...{% endblock %}
+{% block header_subtitle %}فروشگاه ارشیا صمیمی فر{% endblock %}
+{% block header_title %}فروشگاه به زودی باز میشود{% endblock %}
 {% block content %}
     <section class="gt-cooming-soon-section section-padding fix bg-cover" style="background-image: url({% static 'xsports/img/inner-page/cooming-soon.jpg' %});">
         <div class="container">
