--- a/home_module/templates/home_module/index.html
+++ b/home_module/templates/home_module/index.html
@@ -1,6 +1,8 @@
 {% extends 'shared/_layout.html' %}
 {% load static %}
 {% block title %}ایکس اسپورت | خانه{% endblock %}
+{% block header_subtitle %}وبسایت ارشیا صمیمی فر{% endblock %}
+{% block header_title %}به وب‌سایت رسمی ارشیا صمیمی‌فر خوش آمدید{% endblock %}
 {% block content %}
     <!-- GT About Section Start -->
     <section class="gt-about-section fix section-padding rtl">
