--- a/templates/shared/site_footer_component.html
+++ b/templates/shared/site_footer_component.html
@@ -6,7 +6,7 @@
                 <div class="col-xl-4 col-lg-6 col-md-12 wow fadeInUp rtl" data-wow-delay=".2s">
                     <div class="gt-footer-widget-items rtl">
                         <div class="gt-widget-head">
-                            <a href="#" class="gt-footer-logo">
+                            <a href="{% url 'home' %}" class="gt-footer-logo">
                                 <img src="{% static 'xsports/img/logo/white-logo.svg' %}" alt="img">
                             </a>
                         </div>
