--- a/article_module/templates/article_module/article_detail.html
+++ b/article_module/templates/article_module/article_detail.html
@@ -34,10 +34,9 @@
                                 </div>
                                 <div class="col-lg-4 col-12 mt-3 mt-lg-0 text-lg-end">
                                     <div class="social-share">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.instagram.com/arshia219675/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                                        <a href="https://web.telegram.org/k/#@arshia21420" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                                        <a href="https://wa.me/989374641310" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i></a>
                                     </div>
                                 </div>
                             </div>
