--- a/article_module/templates/components/sidebar.html
+++ b/article_module/templates/components/sidebar.html
@@ -46,38 +46,38 @@
         <div class="gt-contact-bg bg-cover"
              style="background-image: url({% static 'xsports/img/inner-page/match-details/bg.jpg' %});">
             <div class="gt-contact-content">
-                <h3>نیاز به کمک دارید؟</h3>
-                <p>نیاز به کمک دارید؟ با ما تماس بگیرید – پشتیبانی کامل </p>
-                <div class="gt-contact-item">
-                    <div class="gt-icon">
-                        <i class="fa-solid fa-phone"></i>
-                    </div>
-                    <ul class="gt-list">
-                        <li><span>تماس با ما:</span></li>
-                        <li><a href="tel:+0094382229540">09120000000</a></li>
-                    </ul>
-                </div>
-                <div class="gt-contact-item">
-                    <div class="gt-icon">
-                        <i class="fa-regular fa-envelope"></i>
-                    </div>
-                    <ul class="gt-list">
-                        <li><span>ایمیل ما</span></li>
-                        <li><a href="#">
-                            infor@xridergamil.com
-                        </a></li>
-                    </ul>
-                </div>
-                <div class="gt-contact-item mb-0">
-                    <div class="gt-icon">
-                        <i class="fa-solid fa-location-dot"></i>
-                    </div>
-                    <ul class="gt-list">
-                        <li><span>لوکیشن:</span></li>
-                        <li>ایران استان البرز</li>
-                    </ul>
-                </div>
-            </div>
+                                <h3>نیاز به کمک دارید؟</h3>
+                                <p>نیاز به کمک دارید؟ با ما تماس بگیرید – پشتیبانی کامل ۲۴ ساعته، ۷ روز هفته</p>
+                                <div class="gt-contact-item">
+                                    <div class="gt-icon">
+                                        <i class="fa-solid fa-phone"></i>
+                                    </div>
+                                    <ul class="gt-list">
+                                        <li><span>تماس با ما:</span></li>
+                                        <li><a href="tel:+989374641310">09374641310</a></li>
+                                    </ul>
+                                </div>
+                                <div class="gt-contact-item">
+                                    <div class="gt-icon">
+                                        <i class="fa-regular fa-envelope"></i>
+                                    </div>
+                                    <ul class="gt-list">
+                                        <li><span>ایمیل ما</span></li>
+                                        <li><a href="mailto:arshia21420@gmail.com">
+                                            arshia21420@gmail.com
+                                        </a></li>
+                                    </ul>
+                                </div>
+                                <div class="gt-contact-item mb-0">
+                                    <div class="gt-icon">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                    </div>
+                                    <ul class="gt-list">
+                                        <li><span>لوکیشن:</span></li>
+                                        <li>ایران تهران سلسبیل</li>
+                                    </ul>
+                                </div>
+                            </div>
         </div>
     </div>
 </div>
