--- a/contact_module/templates/contact_module/contact.html
+++ b/contact_module/templates/contact_module/contact.html
@@ -80,7 +80,7 @@
                                     </div>
                                     <ul class="gt-list">
                                         <li><span>تماس با ما:</span></li>
-                                        <li><a href="tel:+0094382229540">09120000000</a></li>
+                                        <li><a href="tel:+989374641310">09374641310</a></li>
                                     </ul>
                                 </div>
                                 <div class="gt-contact-item">
@@ -89,8 +89,8 @@
                                     </div>
                                     <ul class="gt-list">
                                         <li><span>ایمیل ما</span></li>
-                                        <li><a href="#">
-                                            infor@xridergamil.com
+                                        <li><a href="mailto:arshia21420@gmail.com">
+                                            arshia21420@gmail.com
                                         </a></li>
                                     </ul>
                                 </div>
@@ -100,7 +100,7 @@
                                     </div>
                                     <ul class="gt-list">
                                         <li><span>لوکیشن:</span></li>
-                                        <li>ایران استان البرز</li>
+                                        <li>ایران تهران سلسبیل</li>
                                     </ul>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                 <div class="col-xl-12">
                     <div class="gt-map-items">
                         <div class="googpemap">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6678.7619084840835!2d144.9618311901502!3d-37.81450084255415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b4758afc1d%3A0x3119cc820fdfc62e!2sEnvato!5e0!3m2!1sen!2sbd!4v1641984054261!5m2!1sen!2sbd"
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4583.087290345119!2d51.3789181966329!3d35.68359791786032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1754402110072!5m2!1sen!2sse"
                                     style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
