--- a/home_module/templates/home_module/index.html
+++ b/home_module/templates/home_module/index.html
@@ -23,7 +23,7 @@
                             <div class="gt-section-title mb-0">
                                 <h6 class="wow fadeInUp">ارشیا صمیمی فر</h6>
                                 <h2 class="wow fadeInUp rtl" data-wow-delay=".3s">
-                                    سوابق<br>
+                                    سوابق کاری<br>
                                     <span>من</span>
                                 </h2>
                             </div>
