--- a/templates/shared/header_references.html
+++ b/templates/shared/header_references.html
@@ -7,7 +7,7 @@
 <!--<< Animate.css >>-->
 <link rel="stylesheet" href="{% static 'xsports/css/animate.css' %}">
 <!--<< Magnific Popup.css >>-->
-<link rel="stylesheet" href="{% static 'xsports/css/magnific-popup.css' %}">
+<link rel="stylesheet" href="{% static 'xsports/css/magnific-popup.scss' %}">
 <!--<< MeanMenu.css >>-->
 <link rel="stylesheet" href="{% static 'xsports/css/meanmenu.css' %}">
 <!--<< Swiper Bundle.css >>-->
