.env added / git ignore updated

--- a/templates/shared/_layout.html
+++ b/templates/shared/_layout.html
@@ -20,8 +20,8 @@
     <i class="fa-regular fa-arrow-up"></i>
 </button>
 <!-- GT MouseCursor Start -->
-<div class="mouseCursor cursor-outer"></div>
-<div class="mouseCursor cursor-inner"></div>
+{#<div class="mouseCursor cursor-outer"></div>#}
+{#<div class="mouseCursor cursor-inner"></div>#}
 <!-- burger menu Area Start -->
 <div class="fix-area rtl">
     <div class="offcanvas__info">
